update runsetdescription and runsetname